adding old design

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -15,6 +15,7 @@
 @import "styles/site/general/buttons";
 
 /* Components */
+@import "styles/site/components/site-intro";
 @import "styles/site/components/big-preview";
 
 /* Do not remove the comments below. It's the markers used by gulp-inject to inject
