--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,4 +1,17 @@
 <section class="page page--default">
+  <section class="site-into">
+    <h2 class="title--major strong">Simon Hales</h2>
+    <h1 class="title--major">
+      Front End Developer
+      <br/>
+      Web Designer</h1>
+    <div class="divider"></div>
+    <div class="social-icons">
+      <div>twitter</div>
+      <div>linkedin</div>
+      <div>github</div>
+    </div>
+  </section>
   <article class="big-preview">
     <div class="big-preview__content">
       <div class="big-preview__image"></div>
