--- a/src/app/styles/site/general/_general.scss
+++ b/src/app/styles/site/general/_general.scss
@@ -1,3 +1,16 @@
 body {
-  background-color: #141414;
+  background-color: #ffffff;
+
+  &::before {
+    @include gradient(rgba(255,255,255,0.15), rgba(255,255,255,0));
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 280px;
+    z-index: 100;
+    pointer-events: none;
+  }
+
 }
