--- a/src/app/styles/site/general/_typography.scss
+++ b/src/app/styles/site/general/_typography.scss
@@ -2,6 +2,10 @@
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 
+%font--fancy {
+  font-family: 'Lora', Helvetica, Arial, sans-serif;
+}
+
 a {
   color: inherit;
   cursor: pointer;
@@ -20,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
   @extend %font--default;
   font-size: 16px;
-  color: #ffffff;
+  color: #191919;
 }
 
 strong {
@@ -29,6 +33,19 @@ strong {
 
 .align-center {
   text-align: center;
+}
+
+.title--major {
+  @extend %font--fancy;
+  font-size: 37px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  line-height: 1.2em;
+
+  &.strong {
+    font-weight: 700;
+  }
+
 }
 
 .title--article {
@@ -45,6 +62,7 @@ strong {
 // Text
 
 .text--desc {
+  color: rgba(255,255,255,0.76);
   line-height: 1.8em;
 }
 
