--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,71 +1,78 @@
 <section class="page page--default">
   <section class="site-into">
-    <h2 class="title--major strong">Simon Hales</h2>
-    <h1 class="title--major">
-      Front End Developer
-      <br/>
-      Web Designer</h1>
-    <div class="divider"></div>
-    <div class="social-icons">
-      <div>twitter</div>
-      <div>linkedin</div>
-      <div>github</div>
+    <div class="content--centered">
+      <h2 class="title--major">Simon Hales</h2>
+      <h1 class="title--major strong">
+        Front End Developer
+        <br/>
+        Web Designer</h1>
+      <div class="social-icons">
+        <a href="" class="icon icon-twitter"></a>
+        <a href="" class="icon icon-linkedin"></a>
+        <a href="" class="icon icon-github-squared"></a>
+        <a href="mailto:simonghales@gmail.com" class="email">simonghales@gmail.com</a>
+      </div>
+      <div class="download-wrapper">
+        <!--<a class="anchor&#45;&#45;download" href="">Download CV / Resume</a>-->
+        <!--<br/>-->
+        <a class="anchor--button" href="">Download CV / Resume</a>
+      </div>
     </div>
   </section>
-  <article class="big-preview">
-    <div class="big-preview__content">
-      <div class="big-preview__image"></div>
-      <section class="big-preview__info">
-        <h3 class="big-preview__title title--article">soon.is</h3>
-        <h5 class="big-preview__label title--label">front end, web design</h5>
-        <div class="big-preview__links">
-          <a class="anchor--block" href="">
-            <span class="icon icon-link"></span>
-            <span class="text">soon.is</span>
-          </a>
-          <a class="anchor--block" href="">
-            <span class="icon icon-github-circled"></span>
-            <span class="text">simonghales/soonis</span>
-          </a>
-        </div>
-        <div class="big-preview__text">
-          <p class="text--desc">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur culpa
-            cum deleniti dolore eius eum iusto, neque odio officiis,
-            omnis quibusdam, quos tempora ut voluptates!
-            <br/>
-            Delectus dolore dolorem dolorum.
-          </p>
-        </div>
-      </section>
-    </div>
-  </article>
-  <article class="big-preview">
-    <div class="big-preview__content">
-      <div class="big-preview__image"></div>
-      <section class="big-preview__info">
-        <h3 class="big-preview__title title--article">soon.is</h3>
-        <h5 class="big-preview__label title--label">front end, web design</h5>
-        <div class="big-preview__links">
-          <a class="anchor--block" href="">
-            <span class="icon icon-link"></span>
-            <span class="text">soon.is</span>
-          </a>
-          <a class="anchor--block" href="">
-            <span class="icon icon-github-circled"></span>
-            <span class="text">simonghales/soonis</span>
-          </a>
-        </div>
-        <div class="big-preview__text">
-          <p class="text--desc">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur culpa
-            cum deleniti dolore eius eum iusto, neque odio officiis,
-            omnis quibusdam, quos tempora ut voluptates!
-            <br/>
-            Delectus dolore dolorem dolorum.
-          </p>
-        </div>
-      </section>
-    </div>
-  </article>
+  <!--<article class="big-preview">-->
+    <!--<div class="big-preview__content">-->
+      <!--<div class="big-preview__image"></div>-->
+      <!--<section class="big-preview__info">-->
+        <!--<h3 class="big-preview__title title&#45;&#45;article">soon.is</h3>-->
+        <!--<h5 class="big-preview__label title&#45;&#45;label">front end, web design</h5>-->
+        <!--<div class="big-preview__links">-->
+          <!--<a class="anchor&#45;&#45;block" href="">-->
+            <!--<span class="icon icon-link"></span>-->
+            <!--<span class="text">soon.is</span>-->
+          <!--</a>-->
+          <!--<a class="anchor&#45;&#45;block" href="">-->
+            <!--<span class="icon icon-github-circled"></span>-->
+            <!--<span class="text">simonghales/soonis</span>-->
+          <!--</a>-->
+        <!--</div>-->
+        <!--<div class="big-preview__text">-->
+          <!--<p class="text&#45;&#45;desc">-->
+            <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur culpa-->
+            <!--cum deleniti dolore eius eum iusto, neque odio officiis,-->
+            <!--omnis quibusdam, quos tempora ut voluptates!-->
+            <!--<br/>-->
+            <!--Delectus dolore dolorem dolorum.-->
+          <!--</p>-->
+        <!--</div>-->
+      <!--</section>-->
+    <!--</div>-->
+  <!--</article>-->
+  <!--<article class="big-preview">-->
+    <!--<div class="big-preview__content">-->
+      <!--<div class="big-preview__image"></div>-->
+      <!--<section class="big-preview__info">-->
+        <!--<h3 class="big-preview__title title&#45;&#45;article">soon.is</h3>-->
+        <!--<h5 class="big-preview__label title&#45;&#45;label">front end, web design</h5>-->
+        <!--<div class="big-preview__links">-->
+          <!--<a class="anchor&#45;&#45;block" href="">-->
+            <!--<span class="icon icon-link"></span>-->
+            <!--<span class="text">soon.is</span>-->
+          <!--</a>-->
+          <!--<a class="anchor&#45;&#45;block" href="">-->
+            <!--<span class="icon icon-github-circled"></span>-->
+            <!--<span class="text">simonghales/soonis</span>-->
+          <!--</a>-->
+        <!--</div>-->
+        <!--<div class="big-preview__text">-->
+          <!--<p class="text&#45;&#45;desc">-->
+            <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur culpa-->
+            <!--cum deleniti dolore eius eum iusto, neque odio officiis,-->
+            <!--omnis quibusdam, quos tempora ut voluptates!-->
+            <!--<br/>-->
+            <!--Delectus dolore dolorem dolorum.-->
+          <!--</p>-->
+        <!--</div>-->
+      <!--</section>-->
+    <!--</div>-->
+  <!--</article>-->
 </section>
