--- a/src/assets/css/fontello-codes.css
+++ b/src/assets/css/fontello-codes.css
@@ -5,3 +5,5 @@
 .icon-twitter:before { content: '\24'; } /* '$' */
 .icon-twitter-squared:before { content: '\25'; } /* '%' */
 .icon-mail-squared:before { content: '\26'; } /* '&amp;' */
+.icon-linkedin-squared:before { content: '\27'; } /* ''' */
+.icon-linkedin:before { content: '\28'; } /* '(' */
