--- a/src/assets/css/fontello.css
+++ b/src/assets/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?76617421');
-  src: url('../font/fontello.eot?76617421#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?76617421') format('woff2'),
-       url('../font/fontello.woff?76617421') format('woff'),
-       url('../font/fontello.ttf?76617421') format('truetype'),
-       url('../font/fontello.svg?76617421#fontello') format('svg');
+  src: url('../font/fontello.eot?1173873');
+  src: url('../font/fontello.eot?1173873#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?1173873') format('woff2'),
+       url('../font/fontello.woff?1173873') format('woff'),
+       url('../font/fontello.ttf?1173873') format('truetype'),
+       url('../font/fontello.svg?1173873#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?76617421#fontello') format('svg');
+    src: url('../font/fontello.svg?1173873#fontello') format('svg');
   }
 }
 */
@@ -61,3 +61,5 @@
 .icon-twitter:before { content: '\24'; } /* '$' */
 .icon-twitter-squared:before { content: '\25'; } /* '%' */
 .icon-mail-squared:before { content: '\26'; } /* '&amp;' */
+.icon-linkedin-squared:before { content: '\27'; } /* ''' */
+.icon-linkedin:before { content: '\28'; } /* '(' */
