--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -21,6 +21,7 @@
 @import "styles/site/components/site-intro";
 @import "styles/site/components/big-preview";
 @import "styles/site/components/social-icons";
+@import "styles/site/components/intro-banner";
 
 /* Do not remove the comments below. It's the markers used by gulp-inject to inject
    all your sass files automatically */
