--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -19,6 +19,68 @@
       </div>
     </div>
   </section>
+  <section class="intro-banner">
+    <div class="content--centered">
+      <p class="intro-banner__main-line text--major">
+        Lorem <strong>ipsum dolor</strong> sit amet, consectetur adipiscing elit.
+      </p>
+      <div class="intro-banner__main-content">
+        <div class="intro-banner__additional-text">
+          <p class="text--medium">
+            Mauris <strong>ullamcorper gravida</strong> justo, nec imperdiet est iaculis sed.
+          </p>
+          <p class="text--average">
+            Etiam a libero at tortor <strong>vulputate aliquam.</strong> Quisque tempus diam vel sapien malesuada, ut ornare mi pulvinar.
+          </p>
+          <p class="text--small">
+            Vestibulum lobortis, magna nec eleifend gravida.
+          </p>
+        </div>
+        <div class="intro-banner__lists">
+          <div class="intro-banner__lists__col">
+            <h4>Front End</h4>
+            <ul class="tags-list">
+              <li>
+                <span>Angular JS</span>
+              </li>
+              <li>
+                <span>SASS & LESS</span>
+              </li>
+              <li>
+                <span>Gulp & Grunt</span>
+              </li>
+              <li>
+                <span>Bower & NPM</span>
+              </li>
+              <li>
+                <span>Git</span>
+              </li>
+            </ul>
+          </div>
+          <div class="intro-banner__lists__col">
+            <h4>Design</h4>
+            <ul class="tags-list">
+              <li>
+                <span>Web Design</span>
+              </li>
+              <li>
+                <span>Mobile Design</span>
+              </li>
+              <li>
+                <span>Graphic Design</span>
+              </li>
+              <li>
+                <span>Adobe Creative Suite</span>
+              </li>
+              <li>
+                <span>Sketch</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!--<article class="big-preview">-->
     <!--<div class="big-preview__content">-->
       <!--<div class="big-preview__image"></div>-->
