--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -22,6 +22,7 @@
 @import "styles/site/components/big-preview";
 @import "styles/site/components/social-icons";
 @import "styles/site/components/intro-banner";
+@import "styles/site/components/project";
 
 /* Do not remove the comments below. It's the markers used by gulp-inject to inject
    all your sass files automatically */
