--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -5,7 +5,7 @@
       <h1 class="title--major strong">
         Front End Developer
         <br/>
-        Web Designer</h1>
+        UX / UI Designer</h1>
       <div class="social-icons">
         <a href="" class="icon icon-twitter"></a>
         <a href="" class="icon icon-linkedin"></a>
@@ -58,16 +58,16 @@
             </ul>
           </div>
           <div class="intro-banner__lists__col">
-            <h4>Design</h4>
+            <h4>UX / UI Design</h4>
             <ul class="tags-list">
               <li>
-                <span>Web Design</span>
+                <span>Web & Mobile Design</span>
               </li>
               <li>
-                <span>Mobile Design</span>
+                <span>Wireframing</span>
               </li>
               <li>
-                <span>Graphic Design</span>
+                <span>Mockups</span>
               </li>
               <li>
                 <span>Adobe Creative Suite</span>
@@ -80,6 +80,58 @@
         </div>
       </div>
     </div>
+  </section>
+  <section class="projects">
+    <article class="project">
+      <div class="content--centered">
+        <div class="project__media">
+          <img src="/assets/images/soonis_cropped.png" alt="Project preview image of Soonis"/>
+        </div>
+        <div class="project__info">
+          <h3 class="title">soon.is</h3>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta doloremque dolorum eveniet
+              fugiat, iste neque quam vel.
+            </p>
+            <p>
+              Architecto cupiditate explicabo impedit iusto, mollitia
+              necessitatibus placeat, provident quibusdam, vel vitae voluptas.
+            </p>
+          </div>
+        </div>
+      </div>
+    </article>
+    <article class="project">
+      <div class="content--centered">
+        <div class="project__media">
+          <img src="/assets/images/soonis_cropped.png" alt="Project preview image of Soonis"/>
+        </div>
+        <div class="project__info">
+          <h3 class="title">reco</h3>
+        </div>
+      </div>
+    </article>
+    <article class="project">
+      <div class="content--centered">
+        <div class="project__media">
+          <img src="/assets/images/soonis_cropped.png" alt="Project preview image of Soonis"/>
+        </div>
+        <div class="project__info">
+          <h3 class="title">yep.is</h3>
+        </div>
+      </div>
+    </article>
+    <article class="project">
+      <div class="content--centered">
+        <div class="project__media">
+          <img src="/assets/images/soonis_cropped.png" alt="Project preview image of Soonis"/>
+        </div>
+        <div class="project__info">
+          <h3 class="title">HTML Thor</h3>
+        </div>
+      </div>
+    </article>
   </section>
   <!--<article class="big-preview">-->
     <!--<div class="big-preview__content">-->
